--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,8 +23,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('addUser') }}">Add User</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                   <li class="nav-item">
+                    <a class="nav-link" href={{ path('listArticles') }}>Articles</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href={{ path('addArticle') }}>Add Articles</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
