--- a/templates/users/addUser.html.twig
+++ b/templates/users/addUser.html.twig
@@ -6,6 +6,7 @@
 <h1>Ajouter un user</h1>
 {{ form_start(form) }}
     {{ form_widget(form) }}
+    {{ form_row(form.avatar) }}
 
     <input type="submit" />
 {{ form_end(form) }}
