--- a/templates/users/listUsers.html.twig
+++ b/templates/users/listUsers.html.twig
@@ -2,7 +2,8 @@
 
 
 {% block body %}
-<h1>HEllO welcome to the jurrasic world</h1>
+<h1>{% trans %}Bienvenue dans le monde jurassique{% endtrans %}</h1>
+<h1>{% trans %}Bonjour{% endtrans %}</h1>
 <a href={{ path('addUser')}}> Ajouter un user </a>
 <table class="table table-hover">
   <thead>
