--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,18 @@
                  <li class="nav-item">
                     <a class="nav-link" href={{ path('addArticle') }}>Add Articles</a>
                 </li>
+                {% if app.user %}
+                    <li class="nav-item">
+                        <p class="nav-link">Bienvenue: {{ app.user.name }} </p>
+                    </li>
+                 {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href={{ path('login') }}>Login</a>
+                    </li>
+                 {% endif %}
+                  {% if app.user %}
+                    <a class="nav-link" href= {{ logout_path('main') }}>LOGOUT</a>
+                 {% endif %}
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
